vemo-app/main/default/objects/StudentProgramAudit__c/StudentProgramAudit__c.object-meta.xml
<CustomObject>
    <label>Student Program Audit</label>
    <nameField>
        <displayFormat>SPA-{000000}</displayFormat>
        <label>Student Program Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Program Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>