vemo-app/main/default/objects/StudentProgramAudit__c/fields/AdobeSignAgreementID__c.field-meta.xml
<CustomField>
    <fullName>AdobeSignAgreementID__c</fullName>
    <label>Adobe Sign Agreement ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>