vemo-app/main/default/objects/StudentProgramAudit__c/fields/AdobeSignJavascript__c.field-meta.xml
<CustomField>
    <fullName>AdobeSignJavascript__c</fullName>
    <label>Adobe Sign Javascript</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>