vemo-app/main/default/objects/StudentProgramAudit__c/fields/AdobeSignWidgetID__c.field-meta.xml
<CustomField>
    <fullName>AdobeSignWidgetID__c</fullName>
    <label>Adobe Sign WidgetID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>