vemo-app/main/default/objects/StudentProgramAudit__c/fields/AgreementSigned__c.field-meta.xml
<CustomField>
    <fullName>AgreementSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>