vemo-app/main/default/objects/StudentProgramAudit__c/fields/ApplicationStartDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationStartDate__c</fullName>
    <label>Application Start Date</label>
    <type>DateTime</type>
</CustomField>