vemo-app/main/default/objects/StudentProgramAudit__c/fields/AuditDateTime__c.field-meta.xml
<CustomField>
    <fullName>AuditDateTime__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Audit DateTime</label>
    <type>DateTime</type>
</CustomField>