vemo-app/main/default/objects/StudentProgramAudit__c/fields/BirthdateCertification__c.field-meta.xml
<CustomField>
    <fullName>BirthdateCertification__c</fullName>
    <label>Birthdate (Certification)</label>
    <type>Date</type>
</CustomField>