vemo-app/main/default/objects/StudentProgramAudit__c/fields/BirthdatePostCertification__c.field-meta.xml
<CustomField>
    <fullName>BirthdatePostCertification__c</fullName>
    <label>Birthdate (Post-Certification)</label>
    <type>Date</type>
</CustomField>