vemo-app/main/default/objects/StudentProgramAudit__c/fields/BirthdatePreCertification__c.field-meta.xml
<CustomField>
    <fullName>BirthdatePreCertification__c</fullName>
    <label>Birthdate (Pre-Certification)</label>
    <type>Date</type>
</CustomField>