vemo-app/main/default/objects/StudentProgramAudit__c/fields/BirthdateStudent__c.field-meta.xml
<CustomField>
    <fullName>BirthdateStudent__c</fullName>
    <label>Birthdate (Student)</label>
    <type>Date</type>
</CustomField>