vemo-app/main/default/objects/StudentProgramAudit__c/fields/BypassAutomation__c.field-meta.xml
<CustomField>
    <fullName>BypassAutomation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Automation</label>
    <type>Checkbox</type>
</CustomField>