vemo-app/main/default/objects/StudentProgramAudit__c/fields/CertificationComments__c.field-meta.xml
<CustomField>
    <fullName>CertificationComments__c</fullName>
    <label>Certification Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>