vemo-app/main/default/objects/StudentProgramAudit__c/fields/CertificationDate__c.field-meta.xml
<CustomField>
    <fullName>CertificationDate__c</fullName>
    <label>Certification Date</label>
    <type>DateTime</type>
</CustomField>