vemo-app/main/default/objects/StudentProgramAudit__c/fields/CongaAttachmentID__c.field-meta.xml
<CustomField>
    <fullName>CongaAttachmentID__c</fullName>
    <label>Conga Attachment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>