vemo-app/main/default/objects/StudentProgramAudit__c/fields/CongaFinalDisclosureID__c.field-meta.xml
<CustomField>
    <fullName>CongaFinalDisclosureID__c</fullName>
    <label>Conga Final DisclosureID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>