vemo-app/main/default/objects/StudentProgramAudit__c/fields/CongaUnsignedAgreementStatus__c.field-meta.xml
<CustomField>
    <fullName>CongaUnsignedAgreementStatus__c</fullName>
    <label>Conga Unsigned AgreementStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Generate</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>