vemo-app/main/default/objects/StudentProgramAudit__c/fields/CopyStudentInfo__c.field-meta.xml
<CustomField>
    <fullName>CopyStudentInfo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Copy Student Info</label>
    <type>Checkbox</type>
</CustomField>