vemo-app/main/default/objects/StudentProgramAudit__c/fields/CreditCheck__c.field-meta.xml
<CustomField>
    <fullName>CreditCheck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Check</label>
    <referenceTo>CreditCheck__c</referenceTo>
    <relationshipLabel>Student Programs</relationshipLabel>
    <relationshipName>StudentPrograms2</relationshipName>
    <type>Lookup</type>
</CustomField>