vemo-app/main/default/objects/StudentProgramAudit__c/fields/CreditCheckDeniedReasonText__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckDeniedReasonText__c</fullName>
    <label>Credit Check Denied Reason Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>