vemo-app/main/default/objects/StudentProgramAudit__c/fields/CreditCheckProcess__c.field-meta.xml
<CustomField>
    <fullName>CreditCheckProcess__c</fullName>
    <label>Credit Check Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Credit Denied</fullName>
            </value>
            <value>
                <fullName>Credit Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>