vemo-app/main/default/objects/StudentProgramAudit__c/fields/CurrentStatusDate__c.field-meta.xml
<CustomField>
    <fullName>CurrentStatusDate__c</fullName>
    <label>Current Status Date</label>
    <type>DateTime</type>
</CustomField>