vemo-app/main/default/objects/StudentProgramAudit__c/fields/CustomerWithdrawnReasonOther__c.field-meta.xml
<CustomField>
    <fullName>CustomerWithdrawnReasonOther__c</fullName>
    <label>Customer Withdrawn Reason - Other</label>
    <type>TextArea</type>
</CustomField>