vemo-app/main/default/objects/StudentProgramAudit__c/fields/DayPriorToFirstDisbursement__c.field-meta.xml
<CustomField>
    <fullName>DayPriorToFirstDisbursement__c</fullName>
    <label>Day Prior to First Disbursement</label>
    <type>Date</type>
</CustomField>