vemo-app/main/default/objects/StudentProgramAudit__c/fields/DaysDelinquent__c.field-meta.xml
<CustomField>
    <fullName>DaysDelinquent__c</fullName>
    <label>Days Delinquent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>