vemo-app/main/default/objects/StudentProgramAudit__c/fields/Deferment__c.field-meta.xml
<CustomField>
    <fullName>Deferment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deferment</label>
    <referenceTo>Deferment__c</referenceTo>
    <relationshipLabel>Student Programs</relationshipLabel>
    <relationshipName>Student_Programs8</relationshipName>
    <type>Lookup</type>
</CustomField>