vemo-app/main/default/objects/StudentProgramAudit__c/fields/DefermentMonthsRemaining__c.field-meta.xml
<CustomField>
    <fullName>DefermentMonthsRemaining__c</fullName>
    <label>Deferment Months Remaining</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>