vemo-app/main/default/objects/StudentProgramAudit__c/fields/DefermentMonthsUsed__c.field-meta.xml
<CustomField>
    <fullName>DefermentMonthsUsed__c</fullName>
    <label>Deferment Months Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>