vemo-app/main/default/objects/StudentProgramAudit__c/fields/DisclosureCalculationProcess__c.field-meta.xml
<CustomField>
    <fullName>DisclosureCalculationProcess__c</fullName>
    <label>Disclosure Calculation Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Generate</fullName>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>