vemo-app/main/default/objects/StudentProgramAudit__c/fields/EnrollmentStatusCertification__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStatusCertification__c</fullName>
    <label>Enrollment Status (Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>