vemo-app/main/default/objects/StudentProgramAudit__c/fields/EnrollmentStatusPreCertification__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStatusPreCertification__c</fullName>
    <label>Enrollment Status (Pre-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>