vemo-app/main/default/objects/StudentProgramAudit__c/fields/EnrollmentStatusStudent__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStatusStudent__c</fullName>
    <label>Enrollment Status (Student)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>