vemo-app/main/default/objects/StudentProgramAudit__c/fields/EstimatedAgreementEndDate__c.field-meta.xml
<CustomField>
    <fullName>EstimatedAgreementEndDate__c</fullName>
    <label>Estimated Agreement End Date</label>
    <type>Date</type>
</CustomField>