vemo-app/main/default/objects/StudentProgramAudit__c/fields/ExpectedGraduationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedGraduationDate__c</fullName>
    <label>Expected Graduation Date</label>
    <type>Date</type>
</CustomField>