vemo-app/main/default/objects/StudentProgramAudit__c/fields/FirstPaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>FirstPaymentDueDate__c</fullName>
    <label>First Payment Due Date</label>
    <type>Date</type>
</CustomField>