vemo-app/main/default/objects/StudentProgramAudit__c/fields/FundingAmountCertification__c.field-meta.xml
<CustomField>
    <fullName>FundingAmountCertification__c</fullName>
    <label>Funding Amount (Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>