vemo-app/main/default/objects/StudentProgramAudit__c/fields/FundingAmountPostCertification__c.field-meta.xml
<CustomField>
    <fullName>FundingAmountPostCertification__c</fullName>
    <label>Funding Amount (Post-Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>