vemo-app/main/default/objects/StudentProgramAudit__c/fields/FundingAmountStudent__c.field-meta.xml
<CustomField>
    <fullName>FundingAmountStudent__c</fullName>
    <label>Funding Amount (Student)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>