vemo-app/main/default/objects/StudentProgramAudit__c/fields/FundingMaximumPreCertification__c.field-meta.xml
<CustomField>
    <fullName>FundingMaximumPreCertification__c</fullName>
    <label>Funding Maximum (Pre-Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>