vemo-app/main/default/objects/StudentProgramAudit__c/fields/FundingMinimumPreCertification__c.field-meta.xml
<CustomField>
    <fullName>FundingMinimumPreCertification__c</fullName>
    <label>Funding Minimum (Pre-Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>