vemo-app/main/default/objects/StudentProgramAudit__c/fields/GenerateAgreement__c.field-meta.xml
<CustomField>
    <fullName>GenerateAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Agreement</label>
    <type>Checkbox</type>
</CustomField>