vemo-app/main/default/objects/StudentProgramAudit__c/fields/GenerateDisbursementSchedule__c.field-meta.xml
<CustomField>
    <fullName>GenerateDisbursementSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Disbursement Schedule</label>
    <type>Checkbox</type>
</CustomField>