vemo-app/main/default/objects/StudentProgramAudit__c/fields/GenerateFinalDisclosure__c.field-meta.xml
<CustomField>
    <fullName>GenerateFinalDisclosure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Final Disclosure</label>
    <type>Checkbox</type>
</CustomField>