vemo-app/main/default/objects/StudentProgramAudit__c/fields/GraceMonthsAllowed__c.field-meta.xml
<CustomField>
    <fullName>GraceMonthsAllowed__c</fullName>
    <label>Grace Months Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>