vemo-app/main/default/objects/StudentProgramAudit__c/fields/GraceMonthsRemaining__c.field-meta.xml
<CustomField>
    <fullName>GraceMonthsRemaining__c</fullName>
    <label>Grace Months Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>