vemo-app/main/default/objects/StudentProgramAudit__c/fields/GraceMonthsUsed__c.field-meta.xml
<CustomField>
    <fullName>GraceMonthsUsed__c</fullName>
    <label>Grace Months Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>