vemo-app/main/default/objects/StudentProgramAudit__c/fields/GracePeriodBeginDate__c.field-meta.xml
<CustomField>
    <fullName>GracePeriodBeginDate__c</fullName>
    <label>Grace Period Begin Date</label>
    <type>Date</type>
</CustomField>