vemo-app/main/default/objects/StudentProgramAudit__c/fields/GracePeriodEndDate__c.field-meta.xml
<CustomField>
    <fullName>GracePeriodEndDate__c</fullName>
    <label>Grace Period End Date</label>
    <type>Date</type>
</CustomField>