vemo-app/main/default/objects/StudentProgramAudit__c/fields/GradeLevelPreCertification__c.field-meta.xml
<CustomField>
    <fullName>GradeLevelPreCertification__c</fullName>
    <label>Grade Level (Pre-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeLevel</valueSetName>
    </valueSet>
</CustomField>