vemo-app/main/default/objects/StudentProgramAudit__c/fields/GradeLevelStudent__c.field-meta.xml
<CustomField>
    <fullName>GradeLevelStudent__c</fullName>
    <label>Grade Level (Student)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GradeLevel</valueSetName>
    </valueSet>
</CustomField>