vemo-app/main/default/objects/StudentProgramAudit__c/fields/IncomeShareCertification__c.field-meta.xml
<CustomField>
    <fullName>IncomeShareCertification__c</fullName>
    <label>Income Share (Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>