vemo-app/main/default/objects/StudentProgramAudit__c/fields/IncomeSharePostCertification__c.field-meta.xml
<CustomField>
    <fullName>IncomeSharePostCertification__c</fullName>
    <label>Income Share (Post-Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>