vemo-app/main/default/objects/StudentProgramAudit__c/fields/IncomeShareStudent__c.field-meta.xml
<CustomField>
    <fullName>IncomeShareStudent__c</fullName>
    <label>Income Share (Student)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>