vemo-app/main/default/objects/StudentProgramAudit__c/fields/InternshipEndDate__c.field-meta.xml
<CustomField>
    <fullName>InternshipEndDate__c</fullName>
    <label>Internship End Date</label>
    <type>Date</type>
</CustomField>