vemo-app/main/default/objects/StudentProgramAudit__c/fields/InternshipStartDate__c.field-meta.xml
<CustomField>
    <fullName>InternshipStartDate__c</fullName>
    <label>Internship Start Date</label>
    <type>Date</type>
</CustomField>