vemo-app/main/default/objects/StudentProgramAudit__c/fields/LeaveOfAbsenceEndDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveOfAbsenceEndDate__c</fullName>
    <label>Leave of Absence End Date</label>
    <type>Date</type>
</CustomField>