vemo-app/main/default/objects/StudentProgramAudit__c/fields/LeaveOfAbsenceStartDate__c.field-meta.xml
<CustomField>
    <fullName>LeaveOfAbsenceStartDate__c</fullName>
    <label>Leave of Absence Start Date</label>
    <type>Date</type>
</CustomField>