vemo-app/main/default/objects/StudentProgramAudit__c/fields/MajorCertification__c.field-meta.xml
<CustomField>
    <fullName>MajorCertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major (Certification)</label>
    <referenceTo>SchoolProgramsOfStudy__c</referenceTo>
    <relationshipLabel>Major (Certification)</relationshipLabel>
    <relationshipName>Student_Programs4</relationshipName>
    <type>Lookup</type>
</CustomField>