vemo-app/main/default/objects/StudentProgramAudit__c/fields/MajorPostCertification__c.field-meta.xml
<CustomField>
    <fullName>MajorPostCertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major (Post-Certification)</label>
    <referenceTo>SchoolProgramsOfStudy__c</referenceTo>
    <relationshipLabel>Student Programs (Major Post-Certification)</relationshipLabel>
    <relationshipName>Student_Programs9</relationshipName>
    <type>Lookup</type>
</CustomField>