vemo-app/main/default/objects/StudentProgramAudit__c/fields/MajorPreCertification__c.field-meta.xml
<CustomField>
    <fullName>MajorPreCertification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major (Pre-Certification)</label>
    <referenceTo>SchoolProgramsOfStudy__c</referenceTo>
    <relationshipLabel>Major (Pre-Certification)</relationshipLabel>
    <relationshipName>Student_Programs7</relationshipName>
    <type>Lookup</type>
</CustomField>