vemo-app/main/default/objects/StudentProgramAudit__c/fields/MajorStudent__c.field-meta.xml
<CustomField>
    <fullName>MajorStudent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Major (Student)</label>
    <referenceTo>SchoolProgramsOfStudy__c</referenceTo>
    <relationshipLabel>Major (Student)</relationshipLabel>
    <relationshipName>Student_Programs10</relationshipName>
    <type>Lookup</type>
</CustomField>