vemo-app/main/default/objects/StudentProgramAudit__c/fields/MinimumIncomePerMonth__c.field-meta.xml
<CustomField>
    <fullName>MinimumIncomePerMonth__c</fullName>
    <label>Minimum Income per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>