vemo-app/main/default/objects/StudentProgramAudit__c/fields/MinimumIncomePerYear__c.field-meta.xml
<CustomField>
    <fullName>MinimumIncomePerYear__c</fullName>
    <label>Minimum Income per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>