vemo-app/main/default/objects/StudentProgramAudit__c/fields/MonthEnd__c.field-meta.xml
<CustomField>
    <fullName>MonthEnd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Month End</label>
    <type>Checkbox</type>
</CustomField>