vemo-app/main/default/objects/StudentProgramAudit__c/fields/MonthlyAmountDueToDate__c.field-meta.xml
<CustomField>
    <fullName>MonthlyAmountDueToDate__c</fullName>
    <label>Monthly Amount Due to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>