vemo-app/main/default/objects/StudentProgramAudit__c/fields/MonthlyAmountPaidToDate__c.field-meta.xml
<CustomField>
    <fullName>MonthlyAmountPaidToDate__c</fullName>
    <label>Monthly Amount Paid to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>