vemo-app/main/default/objects/StudentProgramAudit__c/fields/NextAssessmentDate__c.field-meta.xml
<CustomField>
    <fullName>NextAssessmentDate__c</fullName>
    <label>Next Assessment Date</label>
    <type>Date</type>
</CustomField>