vemo-app/main/default/objects/StudentProgramAudit__c/fields/NextPaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>NextPaymentDueDate__c</fullName>
    <label>Next Payment Due Date</label>
    <type>Date</type>
</CustomField>