vemo-app/main/default/objects/StudentProgramAudit__c/fields/PaymentCapCertification__c.field-meta.xml
<CustomField>
    <fullName>PaymentCapCertification__c</fullName>
    <label>Payment Cap (Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>