vemo-app/main/default/objects/StudentProgramAudit__c/fields/PaymentCapPostCertification__c.field-meta.xml
<CustomField>
    <fullName>PaymentCapPostCertification__c</fullName>
    <label>Payment Cap (Post-Certification)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>