vemo-app/main/default/objects/StudentProgramAudit__c/fields/PaymentCapStudent__c.field-meta.xml
<CustomField>
    <fullName>PaymentCapStudent__c</fullName>
    <label>Payment Cap (Student)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>