vemo-app/main/default/objects/StudentProgramAudit__c/fields/PaymentTermBeginDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermBeginDate__c</fullName>
    <label>Payment Term Begin Date</label>
    <type>Date</type>
</CustomField>