vemo-app/main/default/objects/StudentProgramAudit__c/fields/PaymentTermCertification__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermCertification__c</fullName>
    <label>Payment Term (Certification)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>