vemo-app/main/default/objects/StudentProgramAudit__c/fields/PaymentTermPostCertification__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermPostCertification__c</fullName>
    <label>Payment Term (Post-Certification)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>