vemo-app/main/default/objects/StudentProgramAudit__c/fields/PaymentTermStudent__c.field-meta.xml
<CustomField>
    <fullName>PaymentTermStudent__c</fullName>
    <label>Payment Term (Student)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>