vemo-app/main/default/objects/StudentProgramAudit__c/fields/ReconciliationDue__c.field-meta.xml
<CustomField>
    <fullName>ReconciliationDue__c</fullName>
    <label>Reconciliation Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>