vemo-app/main/default/objects/StudentProgramAudit__c/fields/ReconciliationDueToDate__c.field-meta.xml
<CustomField>
    <fullName>ReconciliationDueToDate__c</fullName>
    <label>Reconciliation Due to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>