vemo-app/main/default/objects/StudentProgramAudit__c/fields/ReconciliationPaidToDate__c.field-meta.xml
<CustomField>
    <fullName>ReconciliationPaidToDate__c</fullName>
    <label>Reconciliation Paid to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>