vemo-app/main/default/objects/StudentProgramAudit__c/fields/RegistrationExceptionProcess__c.field-meta.xml
<CustomField>
    <fullName>RegistrationExceptionProcess__c</fullName>
    <label>Registration Exception Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>