vemo-app/main/default/objects/StudentProgramAudit__c/fields/ResidencyPostCertification__c.field-meta.xml
<CustomField>
    <fullName>ResidencyPostCertification__c</fullName>
    <label>Residency (Post-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residency</valueSetName>
    </valueSet>
</CustomField>