vemo-app/main/default/objects/StudentProgramAudit__c/fields/ResidencyPreCertification__c.field-meta.xml
<CustomField>
    <fullName>ResidencyPreCertification__c</fullName>
    <label>Residency (Pre-Certification)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residency</valueSetName>
    </valueSet>
</CustomField>