vemo-app/main/default/objects/StudentProgramAudit__c/fields/ResidencyStudent__c.field-meta.xml
<CustomField>
    <fullName>ResidencyStudent__c</fullName>
    <label>Residency (Student)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Residency</valueSetName>
    </valueSet>
</CustomField>