vemo-app/main/default/objects/StudentProgramAudit__c/fields/RightToCancelDate__c.field-meta.xml
<CustomField>
    <fullName>RightToCancelDate__c</fullName>
    <label>Right to Cancel Date</label>
    <type>Date</type>
</CustomField>