vemo-app/main/default/objects/StudentProgramAudit__c/fields/ScheduleCreated__c.field-meta.xml
<CustomField>
    <fullName>ScheduleCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Created</label>
    <type>Checkbox</type>
</CustomField>