vemo-app/main/default/objects/StudentProgramAudit__c/fields/SendApplicationCertified__c.field-meta.xml
<CustomField>
    <fullName>SendApplicationCertified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this field is checked the system will generate the Application Certified notification</inlineHelpText>
    <label>Send Application Certified</label>
    <type>Checkbox</type>
</CustomField>